--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.width-9-20 {
+  width: 45%;
+}
+
+.width-11-20 {
+  width: 55%;
+}
+
+.flex-child-item-25 {
+  flex: 1 0 25%;
+}
