--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,13 @@
 .width-11-20 {
   width: 55%;
 }
+
+.edit-profil-form {
+  width: "600px";
+}
+
+@media screen and (max-width: 620px) {
+  .edit-profil-form {
+    width: "300px";
+  }
+}
